# resizable-qtimageview

./: CMakeLists.txt  README.md
include/: resizableimageview.h
src/: resizableimageview.cpp
test/: mainwindow.cpp  mainwindow.h  test.cpp
